--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
             <!-- menus -->
             <ul class="nav-links">
-                 <li><a href="index.php"><i class="fas fa-home"></i>Accueil</a></li>
-                <li><a href="services.php"><i class="fas fa-wrench"></i>Services</a></li>
-                <li><a href="portfolio.php"><i class="fas fa-briefcase"></i>Portfolio</a></li>
-                <li><a href="about.php"><i class="fas fa-info-circle"></i>A Propos</a></li>
-                <li><a href="contact.php"><i class="fas fa-address-book"></i>Contact</a></li>
+                 <li><a href="index.html"><i class="fas fa-home"></i>Accueil</a></li>
+                <li><a href="services.html"><i class="fas fa-wrench"></i>Services</a></li>
+                <li><a href="portfolio.html"><i class="fas fa-briefcase"></i>Portfolio</a></li>
+                <li><a href="about.html"><i class="fas fa-info-circle"></i>A Propos</a></li>
+                <li><a href="contact.html"><i class="fas fa-address-book"></i>Contact</a></li>
             </ul>
             <button class="menu-toggle"><i class="fas fa-bars"></i></button>
         </div>
@@ -52,7 +52,7 @@
         <div class="container" data-aos="fade-up">
             <h1>Transformez vos idées en <span>réalité digitale</span></h1>
             <p>Nous créons des solutions sur mesure pour votre succès en ligne.</p>
-            <a href="services.php" class="btn">Découvrir nos services</a>
+            <a href="services.html" class="btn">Découvrir nos services</a>
         </div>
     </section>
 
