--- a/services.html
+++ b/services.html
@@ -26,15 +26,15 @@
      <header class="header">
         <div class="container navbar">
             <!-- logo -->
-            <a href="index.php" class="logo">Smart<span>Service</span> </a>
+            <a href="index.html" class="logo">Smart<span>Service</span> </a>
 
             <!-- menus -->
             <ul class="nav-links">
-                <li><a href="index.php"><i class="fas fa-home"></i>Accueil</a></li>
-                <li><a href="services.php"><i class="fas fa-wrench"></i>Services</a></li>
-                <li><a href="portfolio.php"><i class="fas fa-briefcase"></i>Portfolio</a></li>
-                <li><a href="about.php"><i class="fas fa-info-circle"></i>A Propos</a></li>
-                <li><a href="contact.php"><i class="fas fa-address-book"></i>Contact</a></li>
+                <li><a href="index.html"><i class="fas fa-home"></i>Accueil</a></li>
+                <li><a href="services.html"><i class="fas fa-wrench"></i>Services</a></li>
+                <li><a href="portfolio.html"><i class="fas fa-briefcase"></i>Portfolio</a></li>
+                <li><a href="about.html"><i class="fas fa-info-circle"></i>A Propos</a></li>
+                <li><a href="contact.html"><i class="fas fa-address-book"></i>Contact</a></li>
             </ul>
             <button class="menu-toggle"><i class="fas fa-bars"></i></button>
         </div>
