--- a/contact.html
+++ b/contact.html
@@ -35,11 +35,11 @@
 
             <!-- menus -->
             <ul class="nav-links">
-               <li><a href="index.php"><i class="fas fa-home"></i>Accueil</a></li>
-                <li><a href="services.php"><i class="fas fa-wrench"></i>Services</a></li>
-                <li><a href="portfolio.php"><i class="fas fa-briefcase"></i>Portfolio</a></li>
-                <li><a href="about.php"><i class="fas fa-info-circle"></i>A Propos</a></li>
-                <li><a href="contact.php"><i class="fas fa-address-book"></i>Contact</a></li>
+               <li><a href="index.html"><i class="fas fa-home"></i>Accueil</a></li>
+                <li><a href="services.html"><i class="fas fa-wrench"></i>Services</a></li>
+                <li><a href="portfolio.html"><i class="fas fa-briefcase"></i>Portfolio</a></li>
+                <li><a href="about.html"><i class="fas fa-info-circle"></i>A Propos</a></li>
+                <li><a href="contact.html"><i class="fas fa-address-book"></i>Contact</a></li>
             </ul>
             <button class="menu-toggle"><i class="fas fa-bars"></i></button>
         </div>
